# prBuddy

./: .gitignore  .prBuddy  Cargo.toml  README.md  release.zsh
src/: cli.rs  config.rs  config_data.rs  discord_api.rs  git_api.rs  git_data.rs  git_structs.rs  github_api.rs  gitlab_api.rs  main.rs  publisher.rs  slack_api.rs
src/git_api/: github_api.rs  gitlab_api.rs
