[package]
name = "pr_buddy"
version = "3.0.0"
authors = ["Mitchel Wijt <mitchel@wijt.net>"]
license = "MIT"
description = "CLI tool to open a PR/merge request and automatically post the link to your communication service"
readme = "README.md"
homepage = "https://github.com/MitchWijt/prBuddy"
repository = "https://github.com/MitchWijt/prBuddy"
keywords = ["cli", "git", "pull-request", "merge-request"]
categories = ["command-line-utilities"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.25.0", features = ["full"] }
clap = { version = "4.1.6", features = ["derive"] }
reqwest = "0.11.14"
shutil = "0.1.1"
serde_json = "1.0"
serde = { version = "1.0.159", features = ["derive"] }
quote = "1.0.26"
async-trait = "0.1.68"
